--- a/spin-print-a-lot.html
+++ b/spin-print-a-lot.html
@@ -1,28 +1,12 @@
 <script id="worker" type="text/worker">
-let waitRAF = false;
 let x = 0, y = 50;
 
-function waitForRAF() {
-  waitRAF = true;
-  requestAnimationFrame(waitForRAF);
-}
-
 function mainLoop() {
-  function busy_loop() {
-    if (x + 1 == 200) {
-      y += 11;
-    }
-    x = (x + 1) % 200;
-
-    waitRAF = false;
-    while (!waitRAF) {
-      executePendingTasks();
-    }
+  const t0 = performance.now();
+  for (let i = 0; i < 1000000; ++i) {
+    console.log("print");
   }
-
-  for (let i = 0; i < 100; ++i) {
-    busy_loop();
-  }
+  console.log('done @', performance.now() - t0);
 }
 
 onmessage = function(ev) {
@@ -33,7 +17,6 @@ onmessage = function(ev) {
 
   const ofc = ev.data;
   setTimeout(mainLoop, 0);
-  waitForRAF();
 }
 </script>
 
