--- a/spin-norender-pump-outside-onmessage.html
+++ b/spin-norender-pump-outside-onmessage.html
@@ -1,27 +1,10 @@
 <script id="worker" type="text/worker">
-let waitRAF = false;
 let x = 0, y = 50;
 
-function waitForRAF() {
-  waitRAF = true;
-  requestAnimationFrame(waitForRAF);
-}
-
 function mainLoop() {
-  function busy_loop() {
-    if (x + 1 == 200) {
-      y += 11;
-    }
-    x = (x + 1) % 200;
-
-    waitRAF = false;
-    while (!waitRAF) {
-      executePendingTasks();
-    }
-  }
-
   for (let i = 0; i < 100; ++i) {
-    busy_loop();
+    requestAnimationFrame(stopExecutingTasks);
+    beginExecutingTasks();
   }
 }
 
@@ -33,7 +16,6 @@ onmessage = function(ev) {
 
   const ofc = ev.data;
   setTimeout(mainLoop, 0);
-  waitForRAF();
 }
 </script>
 
