--- a/spin-render-pump-in-onmessage.html
+++ b/spin-render-pump-in-onmessage.html
@@ -1,11 +1,4 @@
 <script id="worker" type="text/worker">
-let waitRAF = false;
-
-function waitForRAF() {
-  waitRAF = true;
-  requestAnimationFrame(waitForRAF);
-}
-
 onmessage = function(ev) {
   if (ev.data == "hello") {
     y -= 11;
@@ -15,7 +8,6 @@ onmessage = function(ev) {
   var ofc = ev.data;
   var ctx = ofc.getContext("2d");
   var x = 0, y = 50;
-  waitForRAF();
 
   function busy_loop() {
     ctx.fillStyle = x % 2 == 0? "blue" : "red";
@@ -26,10 +18,8 @@ onmessage = function(ev) {
     }
     x = (x + 1) % 200;
 
-    waitRAF = false;
-    while (!waitRAF) {
-      executePendingTasks();
-    }
+    requestAnimationFrame(stopExecutingTasks);
+    beginExecutingTasks();
   }
 
   for (let i = 0; i < 100; ++i) {
