--- a/spin-print-a-lot.html
+++ b/spin-print-a-lot.html
@@ -16,7 +16,7 @@ onmessage = function(ev) {
   }
 
   const ofc = ev.data;
-  setTimeout(mainLoop, 0);
+  requestMainLoop(mainLoop);
 }
 </script>
 
