--- a/spin-render-nopump-outside-onmessage.html
+++ b/spin-render-nopump-outside-onmessage.html
@@ -30,7 +30,7 @@ onmessage = function(ev) {
 
   const ofc = ev.data;
   ctx = ofc.getContext("2d");
-  setTimeout(mainLoop, 0);
+  requestMainLoop(mainLoop);
 }
 </script>
 
